--- a/templates/home.html
+++ b/templates/home.html
@@ -19,15 +19,18 @@
     .dn {
       display: none;
     }
-    .cen{
+
+    .cen {
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 95vh;
     }
-    .mh{
+
+    .mh {
       min-height: 0vh;
     }
+
     .sk-cube-grid {
       width: 150px;
       height: 150px;
@@ -122,21 +125,21 @@
   {% block content %}
   <hr class="container">
   <div class="cen">
-  <div class="spiner">
-    <div class="sk-cube-grid">
-      <div class="sk-cube sk-cube1"></div>
-      <div class="sk-cube sk-cube2"></div>
-      <div class="sk-cube sk-cube3"></div>
-      <div class="sk-cube sk-cube4"></div>
-      <div class="sk-cube sk-cube5"></div>
-      <div class="sk-cube sk-cube6"></div>
-      <div class="sk-cube sk-cube7"></div>
-      <div class="sk-cube sk-cube8"></div>
-      <div class="sk-cube sk-cube9"></div>
+    <div class="spiner">
+      <div class="sk-cube-grid">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
+      </div>
     </div>
   </div>
-  </div>
-  <div class="vid container">
+  <div class="vid container" style="display: flex;">
 
   </div>
   {% endblock content %}
@@ -152,11 +155,11 @@
       type: 'GET',
       url: '/',
       success: function (res) {
-        setTimeout(()=>{
-          spin.classList.add('dn')
-          cen.classList.add('mh')
+
+        spin.style.display = 'none'
+        cen.classList.add('mh')
         vid.innerHTML = `{% include 'index.html' %}`
-        }, 1000)
+
       }
     })
   </script>
