--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 {% load static %}
 
-<div style="display: flex; flex-wrap: wrap;">
+<div style="display: flex; flex-wrap: wrap; justify-content: center;">
   {% for v in imgpost %}
 
-  <div class="card w-25 h-25">
-    <div class="card-body d-flex flex-row">
-      <div style="text-align: center;">
+  <div class="card  ms-3 mt-3" style="width: 350px; height: 340px;">
+    <div class="card-body d-flex flex-row" >
+      <div style="text-align: center;" >
         {% if v.author.profile_pic %}
         <img src="{{ v.author.profile_pic.url }}" class="rounded-circle me-3" height="50px" width="50px" />
         {% endif %}
@@ -22,11 +22,14 @@
         <p class="card-text"><i class="far fa-clock pe-2"></i>{{ v.creat_time }}</p>
       </div>
     </div>
-    <div class="bg-image hover-overlay ripple rounded-0" data-mdb-ripple-color="light">
-      <img class="img-fluid" src="{{ v.img.url }}" alt="{{ v.img_title }} img" height="200" />
+    <div class="bg-image" data-mdb-ripple-color="light">
+      <img class="img-fluid" src="{{ v.img.url }}" alt="{{ v.img_title }} img" style="height: 200px !important; width: 100%;" />
+     <div class="d-flex" style="justify-content: space-around;">
       <a href="#">
         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">Read more</div>
       </a>
+      <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
+     </div>
     </div>
 
   </div>
