--- a/templates/results.html
+++ b/templates/results.html
@@ -4,21 +4,41 @@
 {% block content %}
 {% load static %}
 {% if video %}
-<div class="vid w-100 container ">
+<div class="vid w-100 container mt-5">
   {% for v in video %}
 
-  <div class="row" style="width: 455px;">
-    <div class="mt-2">
-      <img src="{{ v.img.url }}" class="w-100 shadow-1-strong rounded mb-4" alt="..." />
-    
-        <h1 class="mt-2">{{ v.img_title }}<a href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a></h1>
-        <div class="flex" style="display: flex; justify-content: center;">
-          <a href="#" class="text-dark fa-lg"><i class="fa-solid fa-comment "></i></a>
-          <a style="margin-left: 60px; color: #000; text-decoration: none;" href="{% url 'app:public_profile' v.author.username %}"><i class="fa-solid fa-user-check" style="margin-left: 10px;"></i>@{{ v.author.username }}</a>
-          <p style="margin-left: 60px;"><i class="fa-solid fa-calendar-check text-dark" style="margin-right: 10px;"></i>{{ v.creat_time }}</p>
+  <div class="card" style="width: 350px; height: 340px;">
+    <div class="card-body d-flex flex-row" >
+      <div style="text-align: center;" >
+        {% if v.author.profile_pic %}
+        <img src="{{ v.author.profile_pic.url }}" class="rounded-circle me-3" height="50px" width="50px" />
+        {% endif %}
+        {% if not v.author.profile_pic %}
+        <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle me-3" height="50px" width="50px" />
+        {% endif %}
+        <div>
+          <a style=" color: #000; text-decoration: none; font-size: 12px;"
+            href="{% url 'app:public_profile' v.author.username %}">@{{ v.author.username }}</a>
         </div>
+      </div>
+      <div style="margin-left: 25px;">
+        <h2 class="card-title font-weight-bold mb-2">{{ v.img_title }}</h2>
+        <p class="card-text"><i class="far fa-clock pe-2"></i>{{ v.creat_time }}</p>
+      </div>
     </div>
+    <div class="bg-image" data-mdb-ripple-color="light">
+      <img class="img-fluid" src="{{ v.img.url }}" alt="{{ v.img_title }} img" style="height: 200px !important; width: 100%;" />
+     <div class="d-flex" style="justify-content: space-around;">
+      <a href="#">
+        <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">Read more</div>
+      </a>
+      <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
+     </div>
+    </div>
+
   </div>
+
+
   {% endfor %}
 </div>
 {% endif %}
