--- a/templates/user.html
+++ b/templates/user.html
@@ -1,155 +1,200 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site users</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <style>
-        body{
-    margin-top:20px;
-    background:#eee;
-}
+        body {
+            margin-top: 20px;
+            background: #eee;
+        }
 
-.avatar {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    white-space: nowrap;
-    border-radius: 1000px;
-    vertical-align: bottom
-}
+        h2 {
+            font-size: 20px;
+        }
 
-.avatar i {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 10px;
-    height: 10px;
-    border: 2px solid #fff;
-    border-radius: 100%
-}
+        h4 {
+            font-size: 15px;
+            margin-top: -10px;
+        }
 
-.avatar img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    border: 0 none;
-    border-radius: 1000px
-}
+        .avatar {
+            position: relative;
+            display: inline-block;
+            width: 40px;
+            white-space: nowrap;
+            border-radius: 1000px;
+            vertical-align: bottom
+        }
 
-.avatar-online i {
-    background-color: #4caf50
-}
+        .avatar i {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            width: 10px;
+            height: 10px;
+            border: 2px solid #fff;
+            border-radius: 100%
+        }
 
-.avatar-off i {
-    background-color: #616161
-}
+        .avatar img {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            border: 0 none;
+            border-radius: 1000px
+        }
 
-.avatar-busy i {
-    background-color: #ff9800
-}
+        .avatar-online i {
+            background-color: #4caf50
+        }
 
-.avatar-away i {
-    background-color: #f44336
-}
+        .avatar-off i {
+            background-color: #616161
+        }
 
-.avatar-100 {
-    width: 100px
-}
+        .avatar-busy i {
+            background-color: #ff9800
+        }
 
-.avatar-100 i {
-    height: 20px;
-    width: 20px
-}
+        .avatar-away i {
+            background-color: #f44336
+        }
 
-.avatar-lg {
-    width: 50px
-}
+        .avatar-100 {
+            width: 100px
+        }
 
-.avatar-lg i {
-    height: 12px;
-    width: 12px
-}
+        .avatar-100 i {
+            height: 20px;
+            width: 20px
+        }
 
-.avatar-sm {
-    width: 30px
-}
+        .avatar-lg {
+            width: 50px
+        }
 
-.avatar-sm i {
-    height: 8px;
-    width: 8px
-}
+        .avatar-lg i {
+            height: 12px;
+            width: 12px
+        }
 
-.avatar-xs {
-    width: 20px
-}
+        .avatar-sm {
+            width: 30px
+        }
 
-.avatar-xs i {
-    height: 7px;
-    width: 7px
-}
+        .avatar-sm i {
+            height: 8px;
+            width: 8px
+        }
 
-.list-group-item {
-    position: relative;
-    display: block;
-    padding: 10px 15px;
-    margin-bottom: -1px;
-    background-color: #fff;
-    border: 1px solid transparent;
-}
+        .avatar-xs {
+            width: 20px
+        }
+
+        .avatar-xs i {
+            height: 7px;
+            width: 7px
+        }
+
+        .list-group-item {
+            position: relative;
+            display: block;
+            padding: 10px 15px;
+            margin-bottom: -1px;
+            background-color: #fff;
+            border: 1px solid transparent;
+        }
     </style>
-    <h1>{{ usersnum }}</h1>
+    <div class="div">
+        <h1>JQUERY NUMBER ANIMATION</h1>
+        <h3>jQuery counter to count up to a target number</h3>
+
+        <div class="wrapper">
+            <div class="counter col_fourth">
+                <i class="fa fa-code fa-2x"></i>
+                <h2 class="timer count-title count-number" data-to="310" data-speed="1500"></h2>
+                <p class="count-text ">SomeText GoesHere</p>
+            </div>
+
+            <div class="counter col_fourth">
+                <i class="fa fa-coffee fa-2x"></i>
+                <h2 class="timer count-title count-number" data-to="1700" data-speed="1500"></h2>
+                <p class="count-text ">SomeText GoesHere</p>
+            </div>
+
+            <div class="counter col_fourth">
+                <i class="fa fa-lightbulb-o fa-2x"></i>
+                <h2 class="timer count-title count-number" data-to="11900" data-speed="1500"></h2>
+                <p class="count-text ">SomeText GoesHere</p>
+            </div>
+
+            <div class="counter col_fourth end">
+                <i class="fa fa-bug fa-2x"></i>
+                <h2 class="timer count-title count-number" data-to="157" data-speed="1500"></h2>
+                <p class="count-text ">SomeText GoesHere</p>
+            </div>
+        </div>
+    </div>
     {% for x in users %}
 
     <div class="container">
         <div class="row bootstrap snippets bootdey">
             <div class="col-md-8 col-xs-12">
-              <div class="panel" id="followers">
-              
-                <div class="panel-body">
-                  <ul class="list-group list-group-dividered list-group-full">
+                <div class="panel" id="followers">
+
+                    <div class="panel-body">
+                        <ul class="list-group list-group-dividered list-group-full">
 
 
-                    <li class="list-group-item">
-                      <div class="media">
-                        <div class="media-left d-flex">
-                         <div>
-                            <a class="avatar avatar-busy" href="javascript:void(0)">
-                                {% if x.profile_pic %}
-                                <img src="{{ x.profile_pic.url }}" class="rounded-circle me-3" height="50px" width="50px" />
-                                {% endif %}
-                                {% if not x.profile_pic %}
-                                <img src="{% static 'imgs/userprofile.png' %}" class="rounded-circle me-3" height="50px" width="50px" />
-                                {% endif %}
-                                
-                              </a>
-                         </div>
-                         <div>
-                            <div>
-                                <h2>{{ x.first_name }}</h2>
-                                <h4>{{ x.last_name }}</h4>
-                            </div>
-                         </div>
-                        </div>
-                        <div class="media-body ">
-                         
-                          <a href="{% url 'app:public_profile' x.username %}">@{{ x.username }}</a>
-                        </div>
-                      </div>
-                    </li>
+                            <li class="list-group-item">
+                                <div class="media">
+                                    <div class="media-left d-flex" style="align-items: center;">
+                                        <div>
+                                            <a class="avatar avatar-busy"
+                                                href="{% url 'app:public_profile' x.username %}">
+                                                {% if x.profile_pic %}
+                                                <img src="{{ x.profile_pic.url }}" class="rounded-circle me-3"
+                                                    height="50px" width="50px" />
+                                                {% endif %}
+                                                {% if not x.profile_pic %}
+                                                <img src="{% static 'imgs/userprofile.png' %}"
+                                                    class="rounded-circle me-3" height="50px" width="50px" />
+                                                {% endif %}
 
-                  </ul>
+                                            </a>
+                                        </div>
+                                        <div>
+                                            <div>
+                                                <h2>{{ x.first_name }}</h2>
+                                                <h4>{{ x.last_name }}</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="media-body ">
+
+                                        <a href="{% url 'app:public_profile' x.username %}">@{{ x.username }}</a>
+                                    </div>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
-              </div>
             </div>
         </div>
-        </div>
+    </div>
     {% endfor %}
 
 </body>
+
 </html>
