--- a/templates/user.html
+++ b/templates/user.html
@@ -9,6 +9,7 @@
     <title>site users</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -123,6 +124,7 @@ body {
   	text-align: center;	
 }
 
+
 /*-=-=-=-=-=-=-=-=-=-=-=- */
 /* Column Grids */
 /*-=-=-=-=-=-=-=-=-=-=-=- */
@@ -143,12 +145,19 @@ body {
 	position: relative;
 	display:inline;
 	display: inline-block;
-	float: left;
+	/* float: left; */
 	margin-right: 2%;
 	margin-bottom: 20px;
 }
 .end { margin-right: 0 !important; }
 /* Column Grids End */
+
+.usersnem{
+    max-width: 1000px;
+    text-align-last: left;
+    margin-left: auto ;
+    margin-right: auto ; 
+}
 
 .wrapper { width: 980px; margin: 30px auto; position: relative;}
 .counter { background-color: #ffffff; padding: 20px 0; border-radius: 5px;}
@@ -158,85 +167,70 @@ body {
 
     </style>
     <div class="div">
-        <h1>JQUERY NUMBER ANIMATION</h1>
-        <h3>jQuery counter to count up to a target number</h3>
+        <h1 style="text-transform: uppercase;">our site users</h1>
+
 
         <div class="wrapper">
             <div class="counter col_fourth">
-                <i class="fa fa-code fa-2x"></i>
-                <h2 class="timer count-title count-number" data-to="310" data-speed="1500"></h2>
+                <i class="fa fa-user fa-2x"></i>
+                <h2 class="timer count-title count-number" data-to="{{ usersnum }}" data-speed="2000"></h2>
                 <p class="count-text ">SomeText GoesHere</p>
             </div>
 
-            <div class="counter col_fourth">
-                <i class="fa fa-coffee fa-2x"></i>
-                <h2 class="timer count-title count-number" data-to="1700" data-speed="1500"></h2>
-                <p class="count-text ">SomeText GoesHere</p>
-            </div>
-
-            <div class="counter col_fourth">
-                <i class="fa fa-lightbulb-o fa-2x"></i>
-                <h2 class="timer count-title count-number" data-to="11900" data-speed="1500"></h2>
-                <p class="count-text ">SomeText GoesHere</p>
-            </div>
-
-            <div class="counter col_fourth end">
-                <i class="fa fa-bug fa-2x"></i>
-                <h2 class="timer count-title count-number" data-to="157" data-speed="1500"></h2>
-                <p class="count-text ">SomeText GoesHere</p>
-            </div>
+        
         </div>
     </div>
     {% for x in users %}
-
-    <div class="container">
-        <div class="row bootstrap snippets bootdey">
-            <div class="col-md-8 col-xs-12">
-                <div class="panel" id="followers">
-
-                    <div class="panel-body">
-                        <ul class="list-group list-group-dividered list-group-full">
-
-
-                            <li class="list-group-item">
-                                <div class="media">
-                                    <div class="media-left d-flex" style="align-items: center;">
-                                        <div>
-                                            <a class="avatar avatar-busy"
-                                                href="{% url 'app:public_profile' x.username %}">
-                                                {% if x.profile_pic %}
-                                                <img src="{{ x.profile_pic.url }}" class="rounded-circle me-3"
-                                                    height="50px" width="50px" />
-                                                {% endif %}
-                                                {% if not x.profile_pic %}
-                                                <img src="{% static 'imgs/userprofile.png' %}"
-                                                    class="rounded-circle me-3" height="50px" width="50px" />
-                                                {% endif %}
-
-                                            </a>
-                                        </div>
-                                        <div>
+    <div class="usersnem">
+        <div class="container ml-4">
+            <div class="row bootstrap snippets bootdey">
+                <div class="col-md-8 col-xs-12">
+                    <div class="panel" id="followers">
+    
+                        <div class="panel-body">
+                            <ul class="list-group list-group-dividered list-group-full">
+    
+    
+                                <li class="list-group-item">
+                                    <div class="media">
+                                        <div class="media-left d-flex" style="align-items: center;">
                                             <div>
-                                                <h2>{{ x.first_name }}</h2>
-                                                <h4>{{ x.last_name }}</h4>
+                                                <a class="avatar avatar-busy"
+                                                    href="{% url 'app:public_profile' x.username %}">
+                                                    {% if x.profile_pic %}
+                                                    <img src="{{ x.profile_pic.url }}" class="rounded-circle me-3"
+                                                        height="50px" width="50px" />
+                                                    {% endif %}
+                                                    {% if not x.profile_pic %}
+                                                    <img src="{% static 'imgs/userprofile.png' %}"
+                                                        class="rounded-circle me-3" height="50px" width="50px" />
+                                                    {% endif %}
+    
+                                                </a>
+                                            </div>
+                                            <div>
+                                                <div>
+                                                    <h2>{{ x.first_name }}</h2>
+                                                    <h4>{{ x.last_name }}</h4>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="media-body ">
+    
+                                            <a href="{% url 'app:public_profile' x.username %}">@{{ x.username }}</a>
+                                        </div>
                                     </div>
-                                    <div class="media-body ">
-
-                                        <a href="{% url 'app:public_profile' x.username %}">@{{ x.username }}</a>
-                                    </div>
-                                </div>
-                            </li>
-
-                        </ul>
+                                </li>
+    
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     {% endfor %}
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
         (function ($) {
 	$.fn.countTo = function (options) {
@@ -337,6 +331,9 @@ jQuery(function ($) {
   }
 });
     </script>
+    
+  
+
 </body>
 
 </html>
