--- a/templates/profile/edit_profile.html
+++ b/templates/profile/edit_profile.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -75,11 +74,12 @@
     <a class="gohome" href="{% url 'app:home' %}"><i class="fa-solid fa-arrow-left"></i></a>
     <div class="container text-light" style="width: 600px;">
         <h1>Edit profile</h1>
-        <form method="post" ><!-- bu yerda ## enctype="multipart/form-data" ## rasm yuklash uchun  -->
-           <div id="owerflow">
-            {% csrf_token %}
-            {{ form }}
-           </div>
+        <form method="post">
+            <!-- bu yerda ## enctype="multipart/form-data" ## rasm yuklash uchun  -->
+            <div id="owerflow">
+                {% csrf_token %}
+                {{ form }}
+            </div>
             <button type="submit" class="btn btn-info w-100 text-center text-light">update</button>
         </form>
     </div>
