--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
   {% for v in imgpost %}
 
   <div class="card  ms-3 mt-3" style="width: 350px; height: 340px;">
-    <div class="card-body d-flex flex-row" >
-      <div style="text-align: center;" >
+    <div class="card-body d-flex flex-row">
+      <div style="text-align: center;">
         <img src="{{ v.author.profile.img.url }}" class="rounded-circle me-3" height="50px" width="50px" />
         <div>
           <a style=" color: #000; text-decoration: none; font-size: 12px;"
@@ -18,13 +18,14 @@
       </div>
     </div>
     <div class="bg-image" data-mdb-ripple-color="light">
-      <img class="img-fluid" id="img" src="{{ v.img.url }}" alt="{{ v.img_title }} img" style="height: 200px !important; width: 90%;" />
-     <div class="d-flex" style="justify-content: space-around; ">
-      <div>
-        <span><i class="fa-solid fa-expand fa-lg icon"></i></span>
+      <img class="img-fluid" id="img" src="{{ v.img.url }}" alt="{{ v.img_title }} img"
+        style="height: 200px !important; width: 90%;" />
+      <div class="d-flex" style="justify-content: space-around; ">
+        <div>
+          <span><i class="fa-solid fa-expand fa-lg icon"></i></span>
+        </div>
+        <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
       </div>
-      <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
-     </div>
     </div>
 
   </div>
